--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
 encoding//app/FlowerShop.wprx=UTF-8
+encoding//dm/\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
+encoding//dm/\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT011.wprx=UTF-8
+encoding//dm/\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT020.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
