ET010のテーブルを追加しました

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//app/FlowerShop.wprx=UTF-8
+encoding//dm/\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET010.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
