--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,28 @@
 eclipse.preferences.version=1
 encoding//app/FlowerShop.wprx=UTF-8
-encoding//dm/\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
-encoding//dm/\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT011.wprx=UTF-8
-encoding//dm/\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT020.wprx=UTF-8
+encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
+encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT011.wprx=UTF-8
+encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT020.wprx=UTF-8
+encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT010.wprx=UTF-8
+encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT020.wprx=UTF-8
+encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT021.wprx=UTF-8
+encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT022.wprx=UTF-8
+encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT100.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT010.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT020.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT021.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT030.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT040.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT200.wprx=UTF-8
+encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET010.wprx=UTF-8
+encoding//io/0_\u30E1\u30CB\u30E5\u30FC/MENU.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF010.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF020.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF010.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF020.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF010.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF020.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF026.wprx=UTF-8
+encoding//macro/macros.wprx=UTF-8
+encoding//msg/messages.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
