--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,12 @@
 eclipse.preferences.version=1
 encoding//app/FlowerShop.wprx=UTF-8
+encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF011_INSERT.wprx=UTF-8
+encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF013_UPDATE.wprx=UTF-8
+encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_INSERT.wprx=UTF-8
+encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_UPDATE.wprx=UTF-8
+encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_INSERT.wprx=UTF-8
+encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPDATE.wprx=UTF-8
+encoding//dm/0_\u5171\u901A/DMSEQ.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT011.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT020.wprx=UTF-8
@@ -13,12 +20,33 @@ encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT020.wprx=UTF-8
 encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT021.wprx=UTF-8
 encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT030.wprx=UTF-8
 encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT040.wprx=UTF-8
+encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT100.wprx=UTF-8
 encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT200.wprx=UTF-8
 encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET010.wprx=UTF-8
+encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET030.wprx=UTF-8
+encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET100.wprx=UTF-8
+encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/Z010.wprx=UTF-8
+encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/ZT020.wprx=UTF-8
+encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/ZT030.wprx=UTF-8
+encoding//ext/extensions.wprx=UTF-8
 encoding//io/0_\u30E1\u30CB\u30E5\u30FC/MENU.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF010.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF011.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF012_1.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF012_2.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF013.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF020.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_REG.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_UPD.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_1.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_2.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_3.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_4.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF210.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF010.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_REG.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPD.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF012.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF020.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF010.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF020.wprx=UTF-8
