確認しました。

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_INSERT.wprx=UTF-
 encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_UPDATE.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_INSERT.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPDATE.wprx=UTF-8
+encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF021_INSERT.wprx=UTF-8
 encoding//dm/0_\u5171\u901A/DMSEQ.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT011.wprx=UTF-8
@@ -49,8 +50,12 @@ encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPD.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF012.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF020.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF010.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF011_REG.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF011_UPD.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF012.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF020.wprx=UTF-8
-encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF026.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF022.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
 encoding//macro/macros.wprx=UTF-8
 encoding//msg/messages.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
