--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,11 +6,17 @@ encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_INSERT.wprx=UTF-
 encoding//bp/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF021_UPDATE.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_INSERT.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPDATE.wprx=UTF-8
+encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_INSERT.wprx=UTF-8
+encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_UPDATE.wprx=UTF-8
+encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF029.wprx=UTF-8
 encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF021_INSERT.wprx=UTF-8
+encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
 encoding//dm/0_\u5171\u901A/DMSEQ.wprx=UTF-8
+encoding//dm/0_\u5171\u901A/POST_MST.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT011.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT020.wprx=UTF-8
+encoding//dm/COUNTER.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT010.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT020.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT021.wprx=UTF-8
@@ -31,6 +37,7 @@ encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/ZT020.wprx=UTF-8
 encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/ZT030.wprx=UTF-8
 encoding//ext/extensions.wprx=UTF-8
 encoding//io/0_\u30E1\u30CB\u30E5\u30FC/MENU.wprx=UTF-8
+encoding//io/0_\u30E1\u30CB\u30E5\u30FC/MENU_TOP.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF010.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF011.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF012_1.wprx=UTF-8
@@ -43,12 +50,22 @@ encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_1.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_2.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_3.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF022_4.wprx=UTF-8
+encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF200.wprx=UTF-8
 encoding//io/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BF210.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF010.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_REG.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPD.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF012.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF020.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_REG.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_UPD.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF022_1.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF022_2.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF023.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF028.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF029.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF100.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF300.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF010.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF011_REG.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF011_UPD.wprx=UTF-8
@@ -56,6 +73,7 @@ encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF012.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF020.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF022.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF026_01.wprx=UTF-8
 encoding//macro/macros.wprx=UTF-8
 encoding//msg/messages.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
