--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,7 @@ encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPDATE.wprx=UTF-
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_INSERT.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_UPDATE.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF029.wprx=UTF-8
+encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF011_INSERT.wprx=UTF-8
 encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF021_INSERT.wprx=UTF-8
 encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
 encoding//dm/0_\u5171\u901A/DMSEQ.wprx=UTF-8
@@ -74,6 +75,7 @@ encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF020.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF022.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF026_01.wprx=UTF-8
+encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF010.wprx=UTF-8
 encoding//macro/macros.wprx=UTF-8
 encoding//msg/messages.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
