--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,10 +8,12 @@ encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_INSERT.wprx=UTF-
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF011_UPDATE.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_INSERT.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_UPDATE.wprx=UTF-8
+encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF023.wprx=UTF-8
 encoding//bp/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF029.wprx=UTF-8
 encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF011_INSERT.wprx=UTF-8
 encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF021_INSERT.wprx=UTF-8
 encoding//bp/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
+encoding//bp/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF012.wprx=UTF-8
 encoding//dm/0_\u5171\u901A/DMSEQ.wprx=UTF-8
 encoding//dm/0_\u5171\u901A/POST_MST.wprx=UTF-8
 encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT010.wprx=UTF-8
@@ -20,6 +22,7 @@ encoding//dm/B_\u5546\u54C1\u30C7\u30FC\u30BF\u7BA1\u7406/BT020.wprx=UTF-8
 encoding//dm/COUNTER.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT010.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT020.wprx=UTF-8
+encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT020_Q.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT021.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT022.wprx=UTF-8
 encoding//dm/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CT100.wprx=UTF-8
@@ -31,8 +34,12 @@ encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT040.wprx=UTF-8
 encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT100.wprx=UTF-8
 encoding//dm/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DT200.wprx=UTF-8
 encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET010.wprx=UTF-8
+encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET010_Q.wprx=UTF-8
 encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET030.wprx=UTF-8
 encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET100.wprx=UTF-8
+encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET100_Q.wprx=UTF-8
+encoding//dm/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/ET200.wprx=UTF-8
+encoding//dm/FLAG.wprx=UTF-8
 encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/Z010.wprx=UTF-8
 encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/ZT020.wprx=UTF-8
 encoding//dm/Z_\u30E6\u30FC\u30B6\u30FC\u30DE\u30B9\u30BF/ZT030.wprx=UTF-8
@@ -63,6 +70,7 @@ encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF021_UPD.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF022_1.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF022_2.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF023.wprx=UTF-8
+encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF026.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF028.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF029.wprx=UTF-8
 encoding//io/C_\u58F2\u4E0A\u30C7\u30FC\u30BF\u7BA1\u7406/CF100.wprx=UTF-8
@@ -75,7 +83,12 @@ encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF020.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF022.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF024.wprx=UTF-8
 encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF026_01.wprx=UTF-8
-encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF010.wprx=UTF-8
+encoding//io/D_\u4ED5\u5165\u30C7\u30FC\u30BF\u7BA1\u7406/DF026_EXPORT.wprx=UTF-8
+encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF010_1.wprx=UTF-8
+encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF010_2.wprx=UTF-8
+encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF012.wprx=UTF-8
+encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF100.wprx=UTF-8
+encoding//io/E_\u5728\u5EAB\u30C7\u30FC\u30BF\u7BA1\u7406/EF200.wprx=UTF-8
 encoding//macro/macros.wprx=UTF-8
 encoding//msg/messages.wprx=UTF-8
 encoding/wp-db.wprx=UTF-8
